-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.937 2011-04-11 18:48:59 remko Exp $
-----------------------------------------------------------------------------------------

2011-04-11	remko
	* gmt_io.h:		Introduced "enum {GMT_X = 0};" to make debugging easier

2011-04-09	jluis
	* psimage_func.c:	When used with GDAL alow selecting the image's bands order via a
				my_image.jpg+b<stuff> mechanism. 
				Test if image name has a +b<stuff> glued to the name.
	* grdimage_func.c:	---"---
	* gmt_grd.h:		Add a new member "pocket" to the GRD_HEADER struct
	* gmt_gdalread.c:	Fix band parsing algoito allow band selection with reverse ordering. 
				When reading image to grid make sure only one band is processed.
	* gmt_gdalread.h:	Add a new member to GD_CTRL to hold the actual number of loaded bands
	* gmtapi_util.c:	---"---
	* gmt_grdio.c:		---"---
				Check on the "pocket" header member for info about band selection.
	* gmt_customio.c:	---"---

2011-04-07	pwessel
	* gmt_fft.c:		New and separate FFT container which will deal with
				the many ways to get a fast FFT on a particular system.

2011-04-07	jluis
	* gmt_gdalread.c:	Can store images data with BIP or BSQ interleaving.

2011-04-07	remko
	* makecpt_func.c, grd2cpt_func.c:	Use GMT_getsharepath instead of GMT_set_cpt_path.
	* gmt_support.c:	Removed GMT_set_cpt_path.

2011-04-06	pwessel
	* kml2gmt_func.c:	Now needed -mo turned on explicitly.
	* share/cpt/*:		Renamed master cpts from GMT_* to just *.
	* gmt_support.c:	Now parse categorical color tables.
	* psimage_func.c:	Use PSL to read EPS & Sun rasters, GDAL for others.

2011-04-05	pwessel
	* psxy[z]_func.c:	Can not properly paint polygons with holes as indicated by
				OGR/GMT data files.
	* gmtconvert_func.c:	The -S option can be -Sname=value to match a named aspatial values

2011-04-05	pwessel
	* grdblend_func.c:	New option -C (clobber mode) which only lets one input grid