@@ -1,9 +1,10 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.937 2011-04-11 18:48:59 remko Exp $
+	$Id: ChangeLog,v 1.938 2011-04-11 19:36:28 remko Exp $
 -----------------------------------------------------------------------------------------
 
 2011-04-11	remko
-	* gmt_io.h:		Introduced "enum {GMT_X = 0};" to make debugging easier
+	* gmt_io.h:		Introduced "enum {GMT_X, GMT_Y, GMT_Z};" to make debugging easier
+	* gmt_init.c:		Allow using "c" for arcseconds in -B option in GMT_COMPAT.
 
 2011-04-09	jluis
 	* psimage_func.c:	When used with GDAL alow selecting the image's bands order via a
